# PolyrhythmTrainer

./: .gitmodules  Project.xml  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jorkoh/polyrhythmtrainer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Engine.cpp  Engine.h  Game.cpp  Game.h  GameConstants.h  native-lib.cpp
app/src/main/cpp/audio/: AAssetDataSource.cpp  NDKExtractor.h
app/src/main/cpp/shared/: Mixer.h
app/src/main/cpp/utils/: UtilityFunctions.cpp  UtilityFunctions.h
app/src/main/res/drawable/: badges_empty_animation.xml  custom_dropdown.xml  ic_accidental_flat.xml  ic_accidental_natural.xml  ic_accidental_sharp.xml  ic_dark_theme.xml  ic_fire.xml  ic_info.xml  ic_light_theme.xml  ic_listen.xml  ic_metronome.xml  ic_pause.xml  ic_replay.xml  ic_trophy.xml  ic_user.xml  play_animation.xml
app/src/main/res/layout/: activity_main.xml  badge_row.xml  badges_fragment.xml  fragment_sounds.xml  fragment_trainer.xml  infinite_icon.xml  measure_view.xml  mistake_icon.xml  sound_row.xml  sounds_fragment.xml  trainer_fragment.xml  trainer_mode_spinner_dropdown_item.xml  trainer_mode_spinner_item.xml  trainer_view.xml
app/src/main/res/layout-land/: fragment_trainer.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  levels.xml  strings.xml  styles.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-night/: colors.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+46 files in other folders)
